--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>SkillFactoryModule5</title>
 </head>
 <body>
-    <script src="./js/5_2.js"></script>
-    <script src="./js/5_3.js"></script>
-    <script src="./js/5_4.js"></script>
-    <script src="./js/5_5.js"></script>
-    <script src="./js/5_6.js"></script>
-    <script src="./js/5_7.js"></script>
-    <script src="./js/5_8.js"></script>
+<!--    <script src="./js/5_1.js"></script>-->
+<!--    <script src="./js/5_2.js"></script>-->
+<!--    <script src="./js/5_3.js"></script>-->
+<!--    <script src="./js/5_4.js"></script>-->
+<!--    <script src="./js/5_5.js"></script>-->
+<!--    <script src="./js/5_6.js"></script>-->
+<!--    <script src="./js/5_7.js"></script>-->
+<!--    <script src="./js/5_8.js"></script>-->
+    <script src="./js/simulatorJavascript.js"></script>
 </body>
 </html>
