--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <!--    <script src="./js/5_6.js"></script>-->
 <!--    <script src="./js/5_7.js"></script>-->
 <!--    <script src="./js/5_8.js"></script>-->
-    <script src="js/simulator_Javascript_2.js"></script>
+<!--    <script src="js/simulator_Javascript_3.js"></script>-->
+    <script src="./js/6_2.js"></script>
 </body>
 </html>
